
  * Binary representation now pools polymorphic type-id strings in an 
    implicit string pool. The string pool support can also be used to
    pool strings in other situations. For example, you can implement
    string insertion/extraction operators for your stream to pool all
    strings. This can be useful if your documents contain a large number
    of repetitive strings.

Version 3.3.0

  * New option, --char-encoding, allows you to specify the character encoding
    that should be used in the generated code. Valid values for the 'char'
    character type are 'utf8' (default), 'iso8859-1' (new), 'lcp' (Xerces-C++
    local code page), and 'custom' (provides support for custom encodings). 
    Note that if you use a non-default character encoding and include some 
    libxsd headers (e.g., xsd/cxx/xml/string.hxx) directly, then you will 
    need to first include the correct xsd/cxx/xml/char-<enc>.hxx header, 
    where <enc> is iso8859-1, lcp, etc. This mechanism replaces the 
    XSD_USE_LCP macro.

    For the wchar_t character type the only valid value for this option is 
    'auto' and the encoding is automatically selected between UTF-16 and 
    UTF-32, depending on the wchar_t type size.

  * When the XSD compiler is built with Xerces-C++ 3.1.0 or later, the
    handling  of multiple imports for the same namespace is enabled. Before,
    all subsequent imports for a namespace were ignored which caused errors
    in some schemas. Note that if your application has XML Schema validation
    enabled, then you will also need to build it with Xerces-C++ 3.1.0 or
    later to take advantage of this feature.

  * Automatic mapping for the urn-style XML namespaces. The last component
    in the urn name is used to derive the C++ namespace name.

  * New option, --schema-file-regex, in combination with the existing
    --type-file-regex, can be used to place the generated files into 
    subdirectories or to resolve file name conflicts in the file-per-