@@ -17,6 +17,10 @@ C++/Tree
     strings. This can be useful if your documents contain a large number
     of repetitive strings.
 
+  * To get the DOM association in the copy of an object model tree one
+    now needs to explicitly pass the keep_dom flag as the second argument
+    to the copy constructor or clone() function.
+
 Version 3.3.0
 
   * New option, --char-encoding, allows you to specify the character encoding
